--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>zinoviy23</groupId>
-    <artifactId>lazyjava</artifactId>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <groupId>com.github.zinoviy23</groupId>
+    <artifactId>lazy-java</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
